[project]
name = "labelformat"
version = "0.1.11"
authors = [{ name = "Lightly.ai" }]
description = "A tool for converting computer vision label formats."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "tqdm",
  "pyyaml",
  "pillow",
  "pydantic==2.10.6",
  "pydantic-xml==2.17.3",
  "numpy",
]

[project.scripts]
labelformat = "labelformat.cli.cli:main"

[dependency-groups]
dev = [
  "mypy==1.14.1",
  "black",
  "isort",
  "flake8",
  "pytest<8",
  "pytest-mock",
  "build",
  "twine",
  "types-Pillow",
  "types-PyYAML",
  "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/labelformat"]

[tool.hatch.build.targets.wheel]
packages = ["src/labelformat"]

[tool.uv]
required-version = ">=0.10.4"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
python_version = 3.8
warn_unused_configs = true
strict_equality = true
# Disallow dynamic typing
#disallow_any_unimported = true # because mypy fails to follow some imports, e.g. for PIL.Image.Image and matplotlib.Figure
#disallow_any_expr = true # because intermediate expressions do not need to be typed
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
# Disallow untyped definitions
#disallow_untyped_calls = true # otherwise all external functions called must be typed e.g. calls to torch functions
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

# Print format
show_error_codes = true
show_error_context = true
