[project]
name = "labelformat"
version = "0.1.11"
authors = [{ name = "Lightly.ai" }]
description = "A tool for converting computer vision label formats."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "tqdm",
  "pyyaml",
  "pillow",
  "pydantic==2.10.6",
  "pydantic-xml==2.17.3",
  "numpy",
  "fsspec>=2023.1.0",
]

[project.scripts]
labelformat = "labelformat.cli.cli:main"

[project.optional-dependencies]
cloud-storage = [
  "s3fs>=2023.1.0",
  "gcsfs>=2023.1.0",
  "adlfs>=2023.1.0",
]

[dependency-groups]
dev = [
  "mypy==1.14.1",
  "black",
  "isort",
  "flake8",
  "pytest<8",
  "pytest-mock",
  "build",
  "twine",
  "types-Pillow",
  "types-PyYAML",
  "opencv-python",
  "types-tqdm>=4.67.0.20241221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/labelformat"]

[tool.hatch.build.targets.wheel]
packages = ["src/labelformat"]

[tool.uv]
required-version = ">=0.10.4"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/"
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = false

# Print format
show_error_codes = true
show_error_context = true
